@@ -1,3 +1,21 @@
+/*
+#########################################################################
+# (C) ZE CMS, Humboldt-Universitaet zu Berlin
+# Written 2010-2011 by Daniel Rohde <d.rohde@cms.hu-berlin.de>
+#########################################################################
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+*/
 var dragElID = null;
 var dragElCID = null;
 var dragOffset = new Object();
@@ -708,16 +726,19 @@ function handleTextAreaFontFamily(eid,tid) {
 	setTextAreaCookie(eid);
 	return true;
 }
-function startClock(eid,fmt,timeout) {
+function startClock(eid,fmt,interval) {
+	if (!eid || !document.getElementById(eid)) return;
+	if (!fmt) fmt="%I:%M:%S";
+	if (!interval) interval=fmt.match(/%S/) ? 1000 : 60000;
+	renderClock(eid,fmt);
+	window.setInterval("renderClock('"+eid+"','"+fmt+"')", interval);
+}
+function renderClock(eid,fmt) {
 	// %H = 00-23; %I = 01-12; %k = 0-23; %l = 1-12
 	// %M = 00-59; %S = 0-60
-	function addzero(v) {
-		return v<10 ? "0"+v : v;
-	}
+	function addzero(v) { return v<10 ? "0"+v : v; }
 	var e = document.getElementById(eid);
 	if (!e) return;
-	if (!fmt) fmt="%I:%M:%S";
-	if (!timeout) timeout = 1000;
 	var d = new Date();
 	var s = fmt;
 	s = s.replace(/\%(H|k)/, addzero(d.getHours()));
@@ -725,5 +746,4 @@ function startClock(eid,fmt,timeout) {
 	s = s.replace(/\%M/, addzero(d.getMinutes()));
 	s = s.replace(/\%S/, addzero(d.getSeconds()));
 	e.innerHTML = s;
-	window.setTimeout("startClock('"+eid+"','"+fmt+"','"+timeout+"')", timeout);
 }
