@@ -3,6 +3,7 @@
      - added (incomplete) french translatations for the Web interface (thanx Laurent Bardi <Laurent.Bardi@ipbs.fr>)
      - added sysinfo feature (GET)
      - Web interface:
+         - added gzip content encoding support (GET)
          - added variable substitution for $HEADER, $LANGSWITCH, $SIGNATURE (GET)
          - fixed localization bug (GET)
          - added htdocs support (GET)
